--- a/manifest.json
+++ b/manifest.json
@@ -8,42 +8,42 @@
     "start_url": "/",
   "icons": [
     {
-      "src": "images/icons/icon-72x72.png",
+      "src": "assets/unicap logo.jpg",
       "sizes": "72x72",
       "type": "image/png"
     },
     {
-      "src": "images/icons/icon-96x96.png",
+      "src": "assets/unicap logo.jpg",
       "sizes": "96x96",
       "type": "image/png"
     },
     {
-      "src": "images/icons/icon-128x128.png",
+      "src": "assets/unicap logo.jpg",
       "sizes": "128x128",
       "type": "image/png"
     },
     {
-      "src": "images/icons/icon-144x144.png",
+      "src": "assets/unicap logo.jpg",
       "sizes": "144x144",
       "type": "image/png"
     },
     {
-      "src": "images/icons/icon-152x152.png",
+      "src": "assets/unicap logo.jpg",
       "sizes": "152x152",
       "type": "image/png"
     },
     {
-      "src": "images/icons/icon-192x192.png",
+      "src": "assets/unicap logo.jpg",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "images/icons/icon-384x384.png",
+      "src": "assets/unicap logo.jpg",
       "sizes": "384x384",
       "type": "image/png"
     },
     {
-      "src": "images/icons/icon-512x512.png",
+      "src": "assets/unicap logo.jpg",
       "sizes": "512x512",
       "type": "image/png"
     }
